# AI-Agent-Tool

./: .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE_COMPLIANCE.md  Makefile  README.md  REVIEW.md  SBOM.json  compose.dev.yaml  docker-compose.prod.yaml  go.work  go.work.sum  ignored.md  package-lock.json  package.json  plan.md  plan.old  planner.md  todo.md  values.local.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  jules-review.yml  kubesec.yml  release-charts.yml  release-images.yml  security.yml
agents/planner/: agent.md
agents/testTool/: agent.md
agents/testtool/: agent.md
apps/browser-extension/: manifest.json  package.json
apps/cli/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/gateway-api/: .env.example  Dockerfile  Makefile  README.md  coverage  go.mod  go.sum  main.go  main_integration_test.go  main_test.go
apps/gui/: .gitignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vitest.config.ts
apps/vscode-extension/: README.md  package.json
charts/oss-ai-agent-tool/: values.yaml
config/: prometheus.yml
config/plans/: alerts.yaml  analytics.yaml  automation.yaml  chat.yaml  coding.yaml
docs/: README.md  SECURITY-THREAT-MODEL.md  agents-review.md  build-config-review.md  ci-cd.md  cicd-review.md  cli-review.md  code-review-summary.md  configuration.md  consumer-enterprise-modes.md  cross-cutting-concerns-review.md  distributed-file-locking.md  docker-compose-review.md  docker-quickstart.md  documentation-review.md  gateway-api-review.md  gui-review.md  gui.md  indexer-review.md  infrastructure-review.md  kubernetes-quickstart.md  orchestrator-review.md  security-scanning.md
docs/agents/: README.md  framework-overview.md  overview.md
docs/architecture/: overview.md  planner-logic.md
docs/compliance/: README.md  dpia.md  retention-policy.md  system-card.md  threat-model.md
docs/contributing/: good-first-issues.md
docs/monitoring/: metrics-reference.md
docs/plans/: PLAN.md  codex_master_plan.md  comprehensive_remediation_plan.md  documentation_review_plan.md  phase_4_implementation_plan.md  phase_5_implementation_plan.md  (+1 more)
scripts/: generate-compliance-report.js  get-unresolved-pr-comments.sh  jules-ci-review.sh  logger.js  pr-comments-summary.sh  setup-k8s-docker-desktop.ps1  setup-k8s-local.ps1  setup-k8s-local.sh
secrets/: README.md
services/indexer/: Cargo.toml  Dockerfile  README.md  README_EMBEDDINGS.md  ROADMAP.md  VECTOR_SEARCH_IMPLEMENTATION.md  config.example.toml
services/indexer/migrations/: 001_initial_schema.sql  002_add_vector_support.sql
services/indexer/proto/: indexer.proto
services/indexer/src/: analysis.rs  ast.rs  audit.rs  embeddings.rs  grpc_service.rs  lib.rs  lsp.rs  main.rs  request_context.rs  security.rs  semantic.rs  server.rs  storage.rs  symbol_extractor.rs  symbol_registry.rs  telemetry.rs  temporal.rs  test_support.rs  validation.rs
services/indexer/tests/: api_integration_test.rs  test_utils.rs
(+589 files in other folders)
