[package]
name = "ossaat-indexer"
version = "0.1.0"
edition = "2021"
authors = ["OSS AI Agent Tool"]
description = "Symbolic/semantic indexer service placeholder"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
tower-lsp = "0.20"
futures = "0.3"
hyper = { version = "1", features = ["http1", "server"] }
tokio-stream = { version = "0.1", features = ["net"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
chrono = { version = "0.4", features = ["serde"] }
twox-hash = "1"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
parking_lot = "0.12"
regex = "1"
tower = { version = "0.4", features = ["util"] }
once_cell = "1"
sha2 = "0.10"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "tls"] }
tracing-opentelemetry = "0.23"
tower-http = { version = "0.5", features = ["trace"] }
tonic = { version = "0.11", features = ["transport"] }
opentelemetry-semantic-conventions = "0.14"

[dev-dependencies]
tempfile = "3"
