[package]
name = "ossaat-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.14"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lazy_static = "1.4"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
pgvector = { version = "0.4", features = ["sqlx"] }
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
hf-hub = "0.4"
tokenizers = "0.15"
git2 = "0.18"
rand = "0.8.5"
half = "=2.3.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tower-lsp = "0.20"
parking_lot = "0.12"
once_cell = "1.19"
home = "=0.5.9"
axum = "0.7"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.10"

[features]
test-support = []
